fix: :lipstick: fix spacings between header toggle lists

--- a/styles/notion.css
+++ b/styles/notion.css
@@ -312,6 +312,10 @@
   max-width: 100%;
 }
 
+.notion-toggle>summary>.notion-h {
+  margin: 0.25em auto;
+}
+
 .notion-callout-text {
   overflow: hidden;
 }
